# solana-flux-aggregator

./: .dockerignore  .env  .env.chainlink  .env.example  .env.sandbox  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile-program  README.md  SETUP.md  SETUP_CHAINLINK.md  deploy.dev.json  deploy.devnet.json  deploy.json  deploy.json.example  deploy.local.json  deploy.mainnet.json  deploy.private.old.json  deploy.sandbox.json  dev.env  docker-compose.standalone.yml  docker-compose.yml  index.html  package-lock.json  package.json  solana_flux_aggregator.json  test.ts  tsconfig.json
chainlink/config/: api  password
client/: .env  FluxAggregator.ts  deploy.json  index.ts  package.json  utils.ts
config/: pricefeed.devnet.json  pricefeed.json  pricefeed.mainnet.json  setup.dev.json  setup.local.json  setup.mainnet.json  setup.private.json.example  setup.sandbox.json  setup.solink.json  solink_conf.json
config/prices/: btc_usd.json  sol_usd.json  usd_usd.json
integration-example/: Cargo.toml
integration-example/client/: demo.ts
integration-example/src/: entrypoint.rs  lib.rs
program/: Cargo.toml  PROBLEMS.md  SPEC.md
sandbox/: aggregated-feeds.ts
src/: .env  AggregatorObserver.ts  ChainlinkExternalAdapter.ts  Deployer.ts  ErrorNotifier.ts  FluxAggregator.ts  PriceFeed.ts  PriceFeeder.ts  RequestFeeder.ts  RoundRequester.ts  Submitter.ts  cli.ts  config.ts  context.ts  deploy.ts  deployed.json  error.rs  feed.ts  feeds.ts  index.ts  instruction.rs  json.ts  lib.rs  log.ts  metrics.ts  processor.rs  schema.ts  sentry.ts  state.rs  state.ts  utils.ts
(+24 files in other folders)
