[package]
name = "flux-aggregator"
version = "0.1.0"
authors = ["czl1378 <czl1378@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.4.8"
spl-token = { version = "3.0.0", features = [ "no-entrypoint" ] }
byteorder = "1.3"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"
num_enum = "0.5.1"

[lib]
crate-type = ["cdylib", "lib"]

[features]
program = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]