[package]
name = "solana-program-demo"
version = "0.1.0"
authors = ["czl1378 <czl1378@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.4.8"
byteorder = "1.3"
flux-aggregator = { path = "../program", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
program = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]